<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="ru.example.mike.ladlampeconomist.SettlementsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_one_settlments_activity"/>

    <GridLayout
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:columnCount="4"
        android:rowCount="6"
        android:layout_gravity="center">

        <TextView
            android:text="@string/cell_1"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:text="@string/cell_2"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:text="@string/cell_3"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:text="@string/cell_4"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:text="@string/cell_5"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:id="@+id/cell_1_row_2"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_2_row_2"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_3_row_2"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:text="@string/cell_6"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_2_row_3"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_3_row_3"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_4_row_3"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:text="@string/cell_7"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_2_row_4"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:id="@+id/cell_3_row_4"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_4_row_4"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:text="@string/cell_8"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_2_row_5"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_3_row_5"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_4_row_5"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

        <TextView
            android:text="@string/cell_9"
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_2_row_6"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_3_row_6"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>
        <TextView
            android:id="@+id/cell_4_row_6"
            android:text=""
            android:background="@drawable/custom_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:maxWidth="80dp">
        </TextView>

    </GridLayout>

    <TextView
        android:id="@+id/last_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_text"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rates_ago"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rates_ago_text_button"
            android:layout_below="@id/last_layout"
            android:padding="15dp"
            android:onClick="onClickAgo"/>

        <Button
            android:id="@+id/forward_calculation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lamp_forward_text"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:onClick="onClickForward"/>
    </LinearLayout>

</LinearLayout>
