<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/lamp_info_activity"
    tools:context="ru.example.mike.ladlampeconomist.LampInfoActivity">

    <LinearLayout
        android:id="@+id/linear_lamp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_lamp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_power_lamp"/>

        <Spinner
            android:id = "@+id/spinner_power"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_lamp"/>

        <Spinner
            android:id = "@+id/spinner_lamp_price"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_lamp_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_lamp"
        android:layout_below="@id/linear_lamp_layout"/>

    <ImageButton
        android:id="@+id/info_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_info"
        android:background="@android:color/transparent"
        android:onClick="onClickInfoChange"
        android:layout_below="@id/linear_lamp_layout"
        android:layout_toRightOf="@id/text_lamp_3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-10dp"
        android:contentDescription="icon_info" />

    <Spinner
        android:id = "@+id/spinner_lamp_change"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/text_lamp_3"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/layout_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/spinner_lamp_change">

    <TextView
        android:id="@+id/last_text_lamp_activity"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_lamp_change"
        android:text="@string/text_pay_energy"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/text_table_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30dp"
        android:textColor="#000"
        android:paddingTop="1dp"
        android:layout_below="@id/last_text_lamp_activity"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_price_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/led_lamp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_power_lamp"/>

        <Spinner
            android:id = "@+id/spinner_power_led"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_lamp"/>

        <Spinner
            android:id = "@+id/spinner_lamp_price_led"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/text_table_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30dp"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="120dp"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
    <Button
        android:id="@+id/rates_ago"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/rates_ago_text_button"
        android:layout_below="@id/last_layout"
        android:padding="15dp"
        android:onClick="onClickAgo"/>

    <Button
        android:id="@+id/forward_calculation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lamp_forward_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="onClickForward"/>
</RelativeLayout>

</ScrollView>