<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayoutRates"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="ru.example.mike.ladlampeconomist.RatesActivity">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rate1"
            android:id="@+id/textViewRate1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text1"
            android:gravity="center"
            android:layout_span="2"
            android:id="@+id/textView"
            android:layout_below="@+id/textViewRate1"
            android:layout_centerHorizontal="true" />
        <ImageButton
            android:id="@+id/info_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_info"
            android:background="@drawable/icon_info"
            android:onClick="onClickInfo"/>
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id = "@+id/spinnerOne"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />
        <Spinner
            android:id = "@+id/spinnerTwo"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text2"
            android:gravity="center"
            android:layout_span="2"
            android:id="@+id/textView2"
            android:layout_below="@+id/textViewRate1"
            android:layout_centerHorizontal="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Spinner
            android:id = "@+id/spinnerHours"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            android:paddingLeft="150dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text3"
            android:gravity="center"
            android:layout_span="2"
            android:id="@+id/textView3"
            android:layout_below="@+id/textViewRate1"
            android:layout_centerHorizontal="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text5"
        android:id="@+id/textView5"
            android:gravity="center"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text6"
        android:id="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_span="2" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rate2"
            android:layout_column="0"
            android:onClick="onCheckBoxClicked"
            android:checked="true" />
        <ImageButton
            android:id="@+id/info_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_info"
            android:background="@drawable/icon_info"
            android:onClick="onClickInfoRate2"/>


    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id = "@+id/spinner_rates_2_one"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />
        <Spinner
            android:id = "@+id/spinner_rates_2_two"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id = "@+id/spinner_rates_2_hours"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            android:paddingLeft="150dp"
            android:paddingRight="50dp" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text4"
            android:gravity="center"
            android:layout_span="2"
            android:id="@+id/textView4"
            android:layout_below="@+id/textViewRate1"
            android:layout_centerHorizontal="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id = "@+id/spinner_percent"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            android:paddingLeft="150dp" />

    </TableRow>


    <LinearLayout
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ago"
            android:id="@+id/buttonAgo"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickAgo"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rates"
            android:id="@+id/buttonForward"
            android:layout_alignTop="@+id/buttonAgo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickForward"
            android:layout_weight="1" />
</LinearLayout>


</TableLayout>

</ScrollView>